forth/test/fail/test_dot_call_digit_local_name.af
\ Must fail to compile.
fun: test_dot_call_digit_local_name_fail { 1val -- err }
end
